update pagination in post controller
